--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/airespace-hugo"]
-	path = themes/airespace-hugo
+	path = themes/airspace-hugo
 	url = https://github.com/themefisher/airspace-hugo.git
