--- a/config.toml
+++ b/config.toml
@@ -49,34 +49,9 @@ URL = "about"
 weight = 1
 
 [[menu.main]]
-name = "Project"
-URL = "project"
+name = "Homes"
+URL = "homes"
 weight = 2
-
-# [[menu.main]]
-# name = "Service"
-# URL = "service"
-# weight = 3
-
-# [[menu.main]]
-# name = "Blog"
-# URL = "blog"
-# weight = 4
-
-# [[menu.main]]
-# weight = 5
-# name = "Pages"
-# hasChildren = true
-
-#   [[menu.main]]
-#   parent = "Pages"
-#   name = "FAQ"
-#   URL = "faq"
-
-#   [[menu.main]]
-#   parent = "Pages"
-#   name = "Pricing"
-#   URL = "pricing"
   
 [[menu.main]]
 name = "Contact"
@@ -91,24 +66,9 @@ URL = "about"
 weight = 1
 
 [[menu.footer]]
-name = "Project"
-URL = "project"
+name = "Homes"
+URL = "homes"
 weight = 2
-
-# [[menu.footer]]
-# name = "Service"
-# URL = "service"
-# weight = 3
-
-# [[menu.footer]]
-# name = "Pricing"
-# URL = "pricing"
-# weight = 4
-
-# [[menu.footer]]
-# name = "FAQ"
-# URL = "faq"
-# weight = 5
 
 [[menu.footer]]
 name = "Contact"
@@ -186,7 +146,5 @@ link = "#"
 languageName = "En"
 languageCode = "en-us"
 contentDir = "content/english"
-weight = 1
-home = "Home"
 # copyright
 copyright = "Copyright &copy; 2019 [Themefisher](https://themefisher.com) All Rights Reserved"
