--- a/data/en/about.yml
+++ b/data/en/about.yml
@@ -2,19 +2,19 @@
 about:
   enable : true
   image : "images/company/about.jpg"
-  title : "We strive to be the best and <br> make awesome work."
-  content : "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius enim, accusantium repellat ex autem numquam
-          iure officiis facere vitae itaque.
-          
-          
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam qui vel cupiditate exercitationem, ea fuga est
-          velit nulla culpa modi quis iste tempora non, suscipit repellendus labore voluptatem dicta amet? Lorem ipsum
-          dolor sit amet, consectetur adipisicing elit. Provident, neque!"
+  title : "Welcome Home!"
+  content : "We build quality homes in any price range! We have been in the home building industry
+          for over 35 years. New Images strives to create a unique build, paying attention not only
+          to detail in cosmetic appeal, but also the quality of construction.
+
+
+          Whether you're looking for your first home or your **forever** home, we would love to
+          serve you! [Contact us today](contact)!"
 
   button:
     enable : true
-    label : "Download Company Profile"
-    link : "#"
+    label : "Contact us"
+    link : "contact"
 
   funfacts:
     # funfacts loop
