--- a/data/en/homepage.yml
+++ b/data/en/homepage.yml
@@ -13,13 +13,13 @@ banner:
 about:
   enable : true
   title : "About Us"
-  description : "Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the
-              blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics"
-  content : "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-            ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-            anim id."
+  description : "We build quality homes in any price range!"
+  content : "We have been in the home building industry for over 35 years. New Images strives to
+          create a unique build, paying attention not only to detail in cosmetic appeal, but also
+          the quality of construction.
+
+          Whether you're looking for your first home or your **forever** home, we would love to
+          serve you! [Contact us today](contact)!"
   image : "images/wrapper-img.png"
 
 
