--- a/data/en/homepage.yml
+++ b/data/en/homepage.yml
@@ -2,12 +2,12 @@
 banner:
   enable : true
   bg_image : "images/slider-bg.jpg"
-  title : "A Digital Marketing <br/> & Design Agency"
-  content : "We love the Web and the work we do.We work closely with our clients to deliver  the best possible solutions for their needs"
-  button:
-    enable : true
-    label : "Discover Our Project"
-    link : "project"
+  title : "Welcome Home"
+  # content : "We love the Web and the work we do.We work closely with our clients to deliver  the best possible solutions for their needs"
+  # button:
+  #   enable : true
+  #   label : "Find Your New Home"
+  #   link : "homes"
 
 ############################# About #################################
 about:
@@ -24,23 +24,23 @@ about:
 
 
 ######################### Portfolio ###############################
-portfolio:
-  enable : true
-  bg_image : "images/featue-bg.jpg"
-  title : "WE BELIEVE IN GREAT IDEAS"
-  content : "
-  Maecenas faucibus mollis interdum. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
+# portfolio:
+#   enable : true
+#   bg_image : "images/featue-bg.jpg"
+#   title : "WE BELIEVE IN GREAT IDEAS"
+#   content : "
+#   Maecenas faucibus mollis interdum. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
 
 
-  Maecenas faucibus mollis interdum. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
+#   Maecenas faucibus mollis interdum. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
 
 
-  Maecenas faucibus mollis interdum. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
-  "
-  button:
-    enable : true
-    label : "View Works"
-    link : "project"
+#   Maecenas faucibus mollis interdum. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
+#   "
+#   button:
+#     enable : true
+#     label : "View Works"
+#     link : "project"
 
 
 ############################# Service ############################
