--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,3 @@
-baseURL = "http://example.org/"
+baseURL = "https://blachniet.github.io/new-images-inc/"
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "New Images"
