--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,3 @@
-baseURL = "https://blachniet.github.io/new-images-inc/"
+baseURL = "https://newimagesva.com/"
 languageCode = "en-us"
 title = "New Images"
